--- a/inc-theme-head.html
+++ b/inc-theme-head.html
@@ -1,1 +1,2 @@
-[<link rel="stylesheet" href="(#CSS{css/fonts.css})" type="text/css" />]
+<script type="text/javascript" src="//use.typekit.net/uwb7fun.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
