--- a/inc-theme-head.html
+++ b/inc-theme-head.html
@@ -1,2 +1,4 @@
 <script type="text/javascript" src="//use.typekit.net/uwb7fun.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+[<link rel="icon" href="(#CHEMIN{favicon.ico})" />]
+[<link rel="icon" type="image/png" href="(#CHEMIN{favicon.png})" />]
